--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "@prisma/client": "^4.1.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
-    "mysql": "^2.18.1"
+    "prisma": "^4.1.1"
   }
 }
